Make JVM args of ConsoleLauncher tasks configurable